[package]
name = "tRust_us_Path_finding"
version = "0.1.0"
edition = "2021"
authors = ["Frigo Matteo","Meneghini Quentin","Cogliandolo Riccardo","Ghirardello Edoardo"]
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
rand = "0.8.5"
strum_macros = "0.25.3"
strum = "0.25.0"